--- a/frontend/index.html
+++ b/frontend/index.html
@@ -226,7 +226,7 @@
             <p>&copy; 2024 Dance Movement Analyzer • Built with MediaPipe & FastAPI</p>
             <div class="footer-links">
                 <a href="/api/docs" target="_blank">API Docs</a>
-                <a href="https://github.com" target="_blank">GitHub</a>
+                <a href="https://github.com/Prathameshv07/Dance-Movement-Analyzer" target="_blank">GitHub</a>
             </div>
         </div>
     </footer>
