--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dance Movement Analyzer</title>
+    <title>DanceDynamics</title>
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div class="header-content">
                 <h1 class="logo">
                     <span class="icon">🕺</span>
-                    Dance Movement Analyzer
+                    DanceDynamics
                 </h1>
                 <p class="tagline">AI-Powered Pose Detection & Movement Classification</p>
             </div>
@@ -227,10 +227,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Dance Movement Analyzer • Built with MediaPipe & FastAPI</p>
+            <p>&copy; 2024 DanceDynamics • Built with MediaPipe & FastAPI</p>
             <div class="footer-links">
                 <a href="/api/docs" target="_blank">API Docs</a>
-                <a href="https://github.com/Prathameshv07/Dance-Movement-Analyzer" target="_blank">GitHub</a>
+                <a href="https://github.com/Prathameshv07/DanceDynamics" target="_blank">GitHub</a>
             </div>
         </div>
     </footer>
